--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^0.28.4",
-    "html-webpack-plugin": "^2.28.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0"
+  },
+  "dependencies": {
+    "html-webpack-plugin": "^2.29.0"
   }
 }
