--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "webpack-sunum",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack",
@@ -13,14 +12,17 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.29.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-nesting": "^4.0.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0"
   },
