--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack",
-    "watch": "webpack -w"
+    "watch": "webpack -w",
+    "dev": "webpack -w --hide-modules --env development"
   },
   "repository": {
     "type": "git",
