--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "webpack",
     "watch": "webpack -w",
-    "dev": "webpack -w --progress --hide-modules --env development"
+    "dev": "webpack -w --progress --hide-modules --env development",
+    "build": "webpack --progress --hide-modules --env production"
   },
   "repository": {
     "type": "git",
