--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack",
-    "watch": "webpack -w",
+    "start": "webpack -w --progress --hide-modules",
     "dev": "webpack -w --progress --hide-modules --env development",
     "build": "webpack --progress --hide-modules --env production"
   },
