--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "webpack-sunum",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "webpack",
     "watch": "webpack -w"
@@ -14,10 +11,8 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^0.28.4",
+    "html-webpack-plugin": "^2.29.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0"
-  },
-  "dependencies": {
-    "html-webpack-plugin": "^2.29.0"
   }
 }
